--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,15 @@
-:root {
+html,
+body,
+*{
+
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  text-align: center;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -94,3 +105,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
