--- a/api-project/style.css
+++ b/api-project/style.css
@@ -24,6 +24,11 @@ html,*{
     width: 300px;
     height: 25vh;
 }
+
+.card:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 10px 0.5rem pink;
+}
 h3 {
     font-size: 40%;
 }
